--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,9 @@
         "typeinfo": "cpp",
         "map": "cpp",
         "cinttypes": "cpp",
-        "stack": "cpp"
+        "stack": "cpp",
+        "unordered_set": "cpp",
+        "optional": "cpp",
+        "fstream": "cpp"
     }
 }
