--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,7 @@
 cmake_minimum_required(VERSION 3.22.1)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 project(CellScript)
 
@@ -17,7 +20,6 @@ add_custom_command(
   DEPENDS ${SOURCE_FILES} /tmp/bin/create_foo_hh main.cpp
   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 )
-
 
 set(PROJECT_SRCS "lex.yy.cc" "parser.tab.cc" "datatypes.cc" "interpreter.cc" "program.cc")
 
